# KnowlinMCP

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  PROJECT_INDEX.md  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
docs/: INDEX.md  MCP_SERVER_PLAN.md
src/kln_knowledge/: __init__.py  capture.py  cli.py  db.py  ingest_docs.py  ingest_sessions.py  multi_search.py  platform.py  query_utils.py  search.py  server.py  utils.py
src/knowlin_mcp/: __init__.py  capture.py  cli.py  db.py  ingest_codex.py  ingest_docs.py  ingest_sessions.py  mcp_server.py  models.py  multi_search.py  platform.py  query_utils.py  search.py  server.py  utils.py
tests/: conftest.py  test_benchmarks.py  test_capture.py  test_cli.py  test_db.py  test_formatters.py  test_ingest_codex.py  test_ingest_docs.py  test_ingest_sessions.py  test_integrity.py  test_mcp_server.py  test_migration.py  test_multi_search.py  test_pdf_ingestion.py  test_properties.py  test_query_utils.py  test_retrieval.py  test_search_pipeline.py  test_server.py
