[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "knowlin-mcp"
version = "0.1.0"
description = "KnowlinMCP -- hybrid semantic knowledge database with MCP server and multi-source search"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Calin Faja" }]

dependencies = [
    "fastembed>=0.4.0",
    "numpy>=1.24.0",
    "click>=8.0",
    "rich>=13.0",
    "psutil>=5.9",
    "platformdirs>=4.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pdf = ["pymupdf4llm>=0.0.10"]
mcp = ["mcp>=1.2.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-benchmark>=5.0",
    "hypothesis>=6.0",
    "ranx>=0.3.0",
    "ruff>=0.4.0",
    "black>=24.0",
]

[project.scripts]
knowlin = "knowlin_mcp.cli:main"
knowlin-mcp = "knowlin_mcp.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that load real ML models (slow, require --integration)",
    "benchmark: performance benchmarks (require --benchmark-enable)",
]
